src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>province__c</fullName>
        <label>省/直辖市</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北京市</fullName>
                </value>
                <value>
                    <fullName>天津市</fullName>
                </value>
                <value>
                    <fullName>上海市</fullName>
                </value>
                <value>
                    <fullName>重庆市</fullName>
                </value>
                <value>
                    <fullName>河北省</fullName>
                </value>
                <value>
                    <fullName>山西省</fullName>
                </value>
                <value>
                    <fullName>辽宁省</fullName>
                </value>
                <value>
                    <fullName>吉林省</fullName>
                </value>
                <value>
                    <fullName>黑龙江省</fullName>
                </value>
                <value>
                    <fullName>江苏省</fullName>
                </value>
                <value>
                    <fullName>浙江省</fullName>
                </value>
                <value>
                    <fullName>安徽省</fullName>
                </value>
                <value>
                    <fullName>福建省</fullName>
                </value>
                <value>
                    <fullName>江西省</fullName>
                </value>
                <value>
                    <fullName>山东省</fullName>
                </value>
                <value>
                    <fullName>河南省</fullName>
                </value>
                <value>
                    <fullName>湖北省</fullName>
                </value>
                <value>
                    <fullName>湖南省</fullName>
                </value>
                <value>
                    <fullName>广东省</fullName>
                </value>
                <value>
                    <fullName>海南省</fullName>
                </value>
                <value>
                    <fullName>四川省</fullName>
                </value>
                <value>
                    <fullName>贵州省</fullName>
                </value>
                <value>
                    <fullName>云南省</fullName>
                </value>
                <value>
                    <fullName>陕西省</fullName>
                </value>
                <value>
                    <fullName>甘肃省</fullName>
                </value>
                <value>
                    <fullName>青海省</fullName>
                </value>
                <value>
                    <fullName>台湾省</fullName>
                </value>
                <value>
                    <fullName>宁夏回族自治区</fullName>
                </value>
                <value>
                    <fullName>新疆维吾尔自治区</fullName>
                </value>
                <value>
                    <fullName>香港特别行政区</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>secondclassify__c</fullName>
        <label>客户二级分类</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>firstclassify__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>阿玛施集团</fullName>
                </value>
                <value>
                    <fullName>爱尔集团</fullName>
                </value>
                <value>
                    <fullName>新视界集团</fullName>
                </value>
                <value>
                    <fullName>华正集团</fullName>
                </value>
                <value>
                    <fullName>朝聚集团</fullName>
                </value>
                <value>
                    <fullName>华厦集团</fullName>
                </value>
                <value>
                    <fullName>其他民营医院</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>secondperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>第二责任人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E7XU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ywjh__c</fullName>
        <label>业务机会价格总额</label>
        <summarizedField>Opportunity.TotalAmount__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ywjhje__c</fullName>
        <label>业务机会总金额（元）</label>
        <summarizedField>Opportunity.TotalAmount__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ywjhsl__c</fullName>
        <label>业务机会数量</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ywjhzs__c</fullName>
        <formula>IF(ywjhsl__c&gt;0, &quot;有销售机会的客户&quot;, &quot;无销售机会的客户&quot;)</formula>
        <label>业务机会区分</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <description>用于记录代理商信息</description>
        <label>代理商</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>用于记录医院信息</description>
        <label>医院</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>